--- a/views/_partials/header.html
+++ b/views/_partials/header.html
@@ -2,14 +2,15 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img width="90px" src="/public/img/logo3.png" alt="">
+        <img width="110px" src="/public/img/ynodejs.png" alt="">
       </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,9 +38,12 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         {{ if user }}
-        <a class="btn btn-default navbar-btn" href="/topics/new">发起</a>
+        <a class="btn btn-success navbar-btn" href="/topics/new">发起</a>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img width="20" height="20" src="../public/img/avatar-max-img.png" alt=""> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <img width="25" height="25" src="../{{ user.avatar }}" alt="" class="img-rounded">
+
+            <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-current-user">
               当前登录用户: {{ user.nickname }}
