--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
   <div class="main">
     <div class="header">
       <a href="/">
-        <img src="/public/img/logo3.png" alt="">
+        <img src="/public/img/ynodejs.png" alt="">
       </a>
       <h1>用户注册</h1>
     </div>
