--- a/views/settings/admin.html
+++ b/views/settings/admin.html
@@ -10,18 +10,19 @@
       <h2>修改密码</h2>
     </div>
     <hr>
-    <form>
+    <form id="change-password">
+      <input type="hidden" name="id" value="{{ user._id }}">
       <div class="form-group">
-        <label for="exampleInputPassword1">当前密码</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+        <label for="oldPassword">当前密码</label>
+        <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">新的密码</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+        <label for="newPassword">新的密码</label>
+        <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">确认密码</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+        <label for="confirmPassword">确认密码</label>
+        <input type="password" class="form-control" id="confirmPassword" placeholder="">
       </div>
       <button type="submit" class="btn btn-success">保存</button>
     </form>
@@ -31,9 +32,33 @@
     </div>
     <div>
       <p>一旦注销，不可找回，请谨慎操作</p>
-      <button class="btn btn-danger">删除</button>
+      <a class="btn btn-danger" href="/settings/admin/delete?id={{ user._id }}">删除</a>
     </div>
     <hr>
   </div>
 </section>
 {{/block}}
+{{ block 'script' }}
+<script>
+  $('#change-password').on('submit', function (e) {
+    e.preventDefault()
+    var formData = $(this).serialize()
+    $.ajax({
+      url: '/settings/password',
+      type: 'post',
+      data: formData,
+      dataType: 'json',
+      success: function (data) {
+        var err_data = data.err_code
+        if (err_data === 0) {
+          window.alert('修改成功')
+        } else if (err_data === 1) {
+          window.alert('原始密码错误')
+        } else if (err_data === 500) {
+          window.alert('服务器忙，请稍后重试！')
+        }
+      }
+    })
+  })
+</script>
+{{ /block }}
