优化写了文章；渲染主页；下一步写分页和回复功能

--- a/views/settings/admin.html
+++ b/views/settings/admin.html
@@ -1,6 +1,6 @@
 {{extend '../_layouts/home.html'}}
 
-{{block 'title'}}{{'多人博客 - 首页'}}{{/block}}
+{{block 'title'}}{{'ynodejs--密码'}}{{/block}}
 
 {{block 'body'}}
 <section class="container">
