--- a/views/settings/profile.html
+++ b/views/settings/profile.html
@@ -1,6 +1,6 @@
 {{extend '../_layouts/home.html'}}
 
-{{block 'title'}}{{'多人博客 - 设置'}}{{/block}}
+{{block 'title'}}{{'ynodejs--设置'}}{{/block}}
 
 {{block 'body'}}
 <section class="container">
