--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <nav aria-label="Page navigation">
-    <ul class="pagination">
+    <!-- <ul class="pagination">
       <li>
         <a href="#" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
@@ -56,7 +56,45 @@
           <span aria-hidden="true">&raquo;</span>
         </a>
       </li>
+    </ul> -->
+
+    <p id="pagination-demo-text">当前第1页</p>
+    <ul class="pagination pagination-demo">
+      <li class="first disabled" jp-role="first" jp-data="1"><a href="javascript:void(0);">First</a></li>
+      <li class="prev disabled" jp-role="prev" jp-data="0"><a href="javascript:void(0);">Previous</a></li>
+      <li class="page active" jp-role="page" jp-data="1"><a href="javascript:void(0);">1</a></li>
+      <li class="page" jp-role="page" jp-data="2"><a href="javascript:void(0);">2</a></li>
+      <li class="page" jp-role="page" jp-data="3"><a href="javascript:void(0);">3</a></li>
+      <li class="page" jp-role="page" jp-data="4"><a href="javascript:void(0);">4</a></li>
+      <li class="page" jp-role="page" jp-data="5"><a href="javascript:void(0);">5</a></li>
+      <li class="page" jp-role="page" jp-data="6"><a href="javascript:void(0);">6</a></li>
+      <li class="page" jp-role="page" jp-data="7"><a href="javascript:void(0);">7</a></li>
+      <li class="page" jp-role="page" jp-data="8"><a href="javascript:void(0);">8</a></li>
+      <li class="page" jp-role="page" jp-data="9"><a href="javascript:void(0);">9</a></li>
+      <li class="page" jp-role="page" jp-data="10"><a href="javascript:void(0);">10</a></li>
+      <li class="next" jp-role="next" jp-data="2"><a href="javascript:void(0);">Next</a></li>
+      <li class="last" jp-role="last" jp-data="100"><a href="javascript:void(0);">Last</a></li>
     </ul>
   </nav>
 </section>
 {{/block}}
+
+{{ block 'script' }}
+<script src="/node_modules/jq-paginator/dist/jq-paginator.min.js" type="text/javascript"></script>
+<script>
+
+  //分页脚本
+  $('.pagination').jqPaginator({
+    totalPages: {{ totalPages }},
+    visiblePages: 5,
+    currentPage: {{ currentPage }},
+    onPageChange: function (num, type) {
+      $('#pagination-demo-text').html('当前第' + num + '页');
+
+      if (type === 'init') return
+      
+      window.location.href = '/page?page_num='+num
+    }
+  })
+</script>
+{{ /block }}
