处理了一下时间显示

--- a/views/_layouts/home.html
+++ b/views/_layouts/home.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <title>{{block 'title'}}默认标题{{/block}}</title>
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
+  <style>
+  body{
+    background: #e1e1e1
+  }
+  </style>
   {{block 'head'}}{{/block}}
 </head>
 
